--- a/frontend/src/components/ads/adContainer.css
+++ b/frontend/src/components/ads/adContainer.css
@@ -6,7 +6,7 @@
 
 .item-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 300px)); /* Adjust minmax and breakpoints as needed */
+    grid-template-columns: repeat(auto-fill, minmax(300px, 300px)); 
     gap:50px;
     padding: 0px 20px;
     margin: 5px;
