--- a/frontend/src/pages/ads/homePage.css
+++ b/frontend/src/pages/ads/homePage.css
@@ -1,17 +1,17 @@
 @media (max-width: 992px) {
     .sidebar {
-      display: none !important; /* Hide sidebar */
+      display: none !important; 
     }
 
     .ad-container {
-        flex-basis: 100% !important; /* Make ad-container take full width of page */
+        flex-basis: 100% !important; 
     }
 
   }
 
 @media (min-width: 993px) {
     .sidebar {
-      display: block !important; /* Hide sidebar */
+      display: block !important; 
     }
   }
 
